--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html>
 <head>
     <title>PDF Example</title>
+    <style>
+        body, html, iframe {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
 
-<h1>PDF Example</h1>
-<p>Click <a href="example.pdf" target="_blank">here</a> to view the PDF.</p>
+<iframe src="Euroanaesthesia 2021 Virtual - Certificate of CME Raphael Mattos.pdf"></iframe>
 
 </body>
 </html>
